[package]
name = "ice"
description = "Core defense engine, API broker, and autonomous daemon supervisor for NET/OS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0.15"
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmp-serde = { workspace = true }
neo4rs = "0.7"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
pbkdf2 = "0.12"
aes-gcm = "0.10"
hex = "0.4"
xml-rs = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
protocol = { path = "../protocol" }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
