[package]
name = "jack"
description = "Kernel-level network packet capture engine powered by Npcap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pcap = { version = "1.3", default-features = false, features = ["capture-stream"] }
protocol = { path = "../protocol" }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
windows = { version = "0.54", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Threading"
] }
