[package]
name = "protocol"
description = "Shared type definitions and serialization for NET/OS inter-service communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.8", features = ["v4", "serde"] }
