[package]
name = "construct-tauri"
description = "NET/OS v1.0 Tauri native desktop shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["NET/OS Contributors"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }
protocol = { path = "../../protocol" }

[features]
# by default Tauri runs in production mode
# debug-header enables logging windows to stdout
custom-protocol = ["tauri/custom-protocol"]
